Followup to r1822700. Add back java 9 detection as noted by pmouawad.
git-svn-id: https://svn.apache.org/repos/asf/jmeter/trunk@1822757 13f79535-47bb-0310-9956-ffa450edef68

Former-commit-id: a13f610bb945ce8f5f287799124899810ab64dfe